added run configurations, fixed package naming error, prepared docs
Signed-off-by: Niklas Rodenbüsch <98448863+NI-R0@users.noreply.github.com>